--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-certifi==2019.3.9
+certifi==2019.9.11
 chardet==3.0.4
+h11==0.8.1
+h2==3.1.1
+hpack==3.0.0
+hstspreload==2019.10.14
+httpx==0.7.5
+hyperframe==5.2.0
 idna==2.8
-python-dotenv==0.10.1
-requests==2.21.0
-urllib3==1.24.2
+python-dotenv==0.10.3
+rfc3986==1.3.2
