--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-certifi==2019.9.11
-chardet==3.0.4
-h11==0.8.1
-h2==3.1.1
-hpack==3.0.0
-hstspreload==2019.10.14
-httpx==0.22.0
-hyperframe==5.2.0
-idna==2.8
-python-dotenv==0.10.3
-rfc3986==1.3.2
+anyio==3.6.1
+certifi==2022.6.15
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
+idna==3.3
+python-dotenv==0.20.0
+rfc3986==1.5.0
+sniffio==1.2.0
